改进 SharpWinver Library 获取系统版本名称的方法；修改 Fluent Winver 的一处翻译

--- a/FluentWinver/Strings/zh-CN/Resources.resw
+++ b/FluentWinver/Strings/zh-CN/Resources.resw
@@ -157,7 +157,7 @@
     <value>OS 内部版本</value>
   </data>
   <data name="OSEditionHeader.Text" xml:space="preserve">
-    <value>类型</value>
+    <value>版本名称</value>
   </data>
   <data name="OSExperienceHeader.Text" xml:space="preserve">
     <value>体验</value>
